2008-02-03  Jerry James  <james@xemacs.org>

	* redisplay.c (generate_displayable_area): If a line has been
	generated in place in the dynarray, use Dynarr_increment instead
	of Dynarr_add.
	* redisplay.c (regenerate_window): Ditto.

2008-02-01  Jerry James  <james@xemacs.org>

	* event-Xt.c (emacs_Xt_event_handler): Remove unnecessary call to
	SET_EVENT_MAGIC_X_EVENT.  See xemacs-beta message
	<870180fe080131201011b191ae5g1d70cbd2136f570c@mail.gmail.com>.

2008-01-30  Aidan Kehoe  <kehoea@parhasard.net>

	* search.c (debug-xemacs-searches): 
	New variable, available on debug builds. Used in
	tests/automated/case-tests.el. 
	(search_buffer): Only store the charset_base for characters with
	translations. Correct some comments, correct some checks. If
	debug_xemacs_searches is non-zero, record which search was used. 
	(boyer_moore): Remove an assertion that was incorrect. Remove its
	documentation. Correct an assertion dealing with equivalence
	tables; we may end up looking through the equivalence table if a
	non-ASCII non-case character was searched for. 

2008-01-25  Michael Sperber  <mike@xemacs.org>

	* emacs.c (vars_of_emacs): Zap mention of CVS.

2008-01-24 Mike Sperber   <mike@xemacs.org>

	* make-src-depend (PrintDeps): Fix Perl code that no longer works
	with Perl 5.10.

2008-01-21  Aidan Kehoe  <kehoea@parhasard.net>

	* elhash.c (Fputhash): Document the return value. 
	(Fclrhash): Ditto. 

2007-12-26  Aidan Kehoe  <kehoea@parhasard.net>

	* casetab.c:
	Extend and correct some case table documentation. 
	* search.c (search_buffer):
	Correct a bug where only the first entry for a character in the
	case equivalence table was examined in determining if the
	Boyer-Moore search algorithm is appropriate.

	If there are case mappings outside of the charset and row of the
	characters specified in the search string, those case mappings can
	be safely ignored (and Boyer-Moore search can be used) if we know